# androidJNIDemo

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  debug.cpp  jniInterfaceTest.c  jniInterfaceTest.h  native-lib.cpp
app/src/main/cpp/include/: debug.h
app/src/main/java/com/example/jnidemo/: JniInterfaceTest.java  MainActivity.java  Student.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
